<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/id_Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/item_home" />
    <item
        android:id="@+id/id_Cursos"
        android:icon="@drawable/ic_reorder_black_24dp"
        android:title="@string/item_curso" />
    <item
        android:id="@+id/id_Foro"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/item_foro" />
    <item
        android:id="@+id/id_Material"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/item_material" />
    <item
        android:id="@+id/id_Planificacion"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/item_planificacion" />

</menu>